Second fix to the smooth scrolling issue on safari

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -12,7 +12,6 @@ html,body
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
-    scroll-behavior: smooth;
 }
 
 a{
@@ -95,9 +94,6 @@ nav{
 /* Media queries for navbar mobile responsiveness */
 @media screen and (max-width: 650px){
 
-    html,body{
-        scroll-behavior: auto;
-    }
     #navbar p:not(:last-child){display:none;}
     
     nav{
